2007-07-10  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/ProjectNodeBuilderExtension.cs,
	  Navigation/ClassPadEventArgs.cs, Project/CProject.cs, Makefile.am,
	  CBinding.addin.xml, icons/update,
	  ProjectPad/ProjectPackagesFolderNodeBuilder.cs, CBinding.mdp: The
	  class pad tree is now built in a seperate thread so it does not
	  block the UI while it is being built.

2007-07-07  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/GlobalsNodeBuilder.cs: Fixes class pad bug when there are
	  multiple C projects open.

2007-07-06  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/StructureNodeBuilder.cs, Navigation/ClassNodeBuilder.cs:
	  The "Show Public Api Only" class pad option is now considered.

2007-07-06  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/ProjectNodeBuilderExtension.cs,
	  Navigation/TagDatabaseManager.cs, Navigation/GlobalsNodeBuilder.cs:
	  Undid the work I had started on getting the tree built in the
	  background because I have to think more about how I'm going to
	  implement that.

2007-07-05  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/ProjectNodeBuilderExtension.cs,
	  Navigation/LanguageItemEventArgs.cs,
	  Navigation/TagDatabaseManager.cs,
	  Navigation/ProjectNavigationInformation.cs,
	  Navigation/GlobalsNodeBuilder.cs,
	  Navigation/LanguageItemCommandHandler.cs,
	  Project/ProjectPackageEventArgs.cs, Makefile.am, CBinding.mdp:
	  Started work on making the class pad tree get created in the
	  background in a seperate thread.

2007-07-03  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/TypedefNodeBuilder.cs, Navigation/StructureNodeBuilder.cs,
	  Navigation/Function.cs, Navigation/Enumeration.cs,
	  Navigation/TagDatabaseManager.cs,
	  Navigation/ProjectNavigationInformation.cs,
	  Navigation/GlobalsNodeBuilder.cs, Navigation/Member.cs,
	  Navigation/Tag.cs, Navigation/ClassNodeBuilder.cs,